# panda_ncs

./: .gitignore  CMakeLists.txt  Exceptional.cal  README.md  absent_follower.cpp  aligner.cpp  capsense.cpp  client.py  follower.cpp  jprb_test.cpp  ncs_common.cpp  ncs_common.h  old_follower.cpp  optitrack.rdp  orientator.cpp  planner.py  pose_reader.cpp  rt_aid.txt  smooth_follower.cpp  vertnailer.cpp  wxyz_follower.cpp  xyz_follower.cpp
middler/: blabla.py  blah.py  constanter.py  coremerge.py  demo_2023_08_31.py  demo_2023_11_01.py  demo_eecs.py  demo_merger.py  ev_frame_server.py  gauss_merger.py  gaussians.py  geometry.py  geotester.py  img_client.py  img_server.py  jens_checker.py  jorg_checker.py  juan_checker.py  merger.py  mv_merger.py  nucmerger.py  old_merger.py  optitracker.py  paramerge.cfg  params.xml  planner.py  presence_merger.py  q_merger.py  tcp_merger.py  udp_frame_server.py  udp_receiver.py  udp_sender.py  vismerger.py
middler/old_stuff/: crap.py  demo_final.py  demo_merger.py  demo_update.py  dummy_xy_sender.py  ev_frame_server.py  gauss_merger.py  get_img.py  planner.py  snn.py  stepper.py  trash.py  whatever.py
trash/: demo_eecs.cpp  munin_follower.cpp  server.cpp
visualizers/: act_bar.py  bar_latentizer.py  biases.bias  calibration.xml  cam3.xml  circle.py  dvgui_project.xml  full_show.py  indexer.py  logs.csv  naive_display.py  old_ev_frame_server.py  plotter.py  random_sender.py  scales.txt  serve_multiple.py  serve_multiple_jprb.py  triple_latentizer.py  vistreamizer.py
visualizers/inivation/: calibration.xml  cam2.xml
(+17 files in other folders)
